_sass/layout.sass
body
  display: flex
  flex-direction: column
  min-height: 100vh
  margin: 0
  box-sizing: border-box
  -webkit-text-size-adjust: 100%

body > header, body > footer
  display: flex
  flex-wrap: wrap
  justify-content: space-between
  align-items: center
  row-gap: 0

header a, footer a
  display: inline-block

footer a
  margin: .75em 0

nav
  margin: .5em -1.3em
  a
    margin: 0 1.3em
  svg
    font-size: 1.3em
    vertical-align: sub

main nav
  font-size: 1.1em
  margin: 1.4em 0
  div
    margin: .5em 0

header h1
  font-size: 1.75em
  margin: 0
  body > &
    font-size: 1.35em

article, main
  flex-grow: 1

